<resources>
    <string name="app_name">B07 Group 1 Project</string>

    <string name="search_lot">Lot Number:</string>
    <string name="search_name">Name:</string>
    <string name="search_category">Category:</string>
    <string name="search_period">Period:</string>
    <string name="search_submit_search">Search</string>
    <string name="search_lot_field">Lot #</string>
    <string name="search_lot_field_hint">Lot # to search for</string>
    <string name="search_name_field">Name</string>
    <string name="search_name_field_hint">Name to search for</string>
    <string name="search_category_field">Category</string>
    <string name="search_category_field_hint">Category to search for</string>
    <string name="search_period_field">Period</string>
    <string name="search_period_field_hint">Period to search for</string>

    <string name="catalog_name">Name</string>
    <string name="catalog_lot">Lot Number</string>
    <string name="catalog_category">Category</string>
    <string name="catalog_period">Period</string>
    <string name="catalog_description">Description</string>
    <string name="catalog_content_description">Image of Catalog Item</string>
    <string name="page_title" translatable="false">TAAM</string>

    <string-array name="categories_array">
        <item>Jade</item>
        <item>Paintings</item>
        <item>Calligraphy</item>
        <item>Rubbings</item>
        <item>Bronze</item>
        <item>Brass and Copper</item>
        <item>Gold and Silvers</item>
        <item>Lacquer</item>
        <item>Enamels</item>
    </string-array>

    <string-array name="periods_array">
        <item>Xia</item>
        <item>Shang</item>
        <item>Zhou</item>
        <item>Chuanqiu</item>
        <item>Zhanggou</item>
        <item>Qin</item>
        <item>Han</item>
        <item>Shangou</item>
        <item>Ji</item>
        <item>South and North</item>
        <item>Shui</item>
        <item>Tang</item>
        <item>Liao</item>
        <item>Song</item>
        <item>Jin</item>
        <item>Yuan</item>
        <item>Ming</item>
        <item>Qing</item>
        <item>Modern</item>
    </string-array>

    <string name="user">Login</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="report">Generate Report</string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete Item</string>

    <string name="content_description_user">Login</string>
    <string name="content_description_search">
        Navigates to a page to search for catalog items
    </string>
    <string name="content_description_add">
        Navigates to a page to add an item to the Catalog
    </string>
    <string name="content_description_report">Navigates to a page to generate a report about catalog items</string>
    <string name="content_description_delete">Deletes the selected catalog items</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item_warning">Note: Duplicate lot numbers in catalog will be replaced</string>

    <string name="generate_report">Generate Report</string>
    <string name="generate_report_hint">Enter report parameter</string>
    <string name="generate_report_dp">Generate with Description and Picture Only</string>

    <string-array name="report_array">
        <item>Generate report by Lot number</item>
        <item>Generate report by Name</item>
        <item>Generate report by Category</item>
        <item>Generate report by Period</item>
        <item>Generate report for all items</item>
    </string-array>
</resources>