<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/user"
        android:title="@string/user"
        android:icon="@drawable/ic_person_24dp"
        android:contentDescription="@string/content_description_user"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_24dp"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add"
        android:title="@string/add"
        android:icon="@drawable/ic_add_24dp"
        android:contentDescription="@string/content_description_add"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/report"
        android:title="@string/report"
        android:icon="@drawable/ic_report_24dp"
        android:contentDescription="@string/content_description_report"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_24dp"
        android:contentDescription="@string/content_description_delete"
        android:visible="false"
        app:showAsAction="never" />
</menu>