<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editLot"
        android:layout_width="240dp"
        android:layout_height="65dp"
        android:layout_marginTop="196dp"
        android:ems="10"
        android:hint="@string/search_lot_field_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lotText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="240dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/search_name_field_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editLot"
        app:layout_constraintTop_toBottomOf="@+id/editLot" />

    <EditText
        android:id="@+id/editCategory"
        android:layout_width="240dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/search_category_field_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editPeriod"
        android:layout_width="240dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/search_period_field_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editCategory"
        app:layout_constraintTop_toBottomOf="@+id/editCategory"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lotText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/search_lot"
        app:layout_constraintBottom_toBottomOf="@+id/editLot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editLot" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_name"
        app:layout_constraintBottom_toBottomOf="@+id/editName"
        app:layout_constraintEnd_toStartOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/editLot" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_category"
        app:layout_constraintBottom_toBottomOf="@+id/editCategory"
        app:layout_constraintEnd_toStartOf="@+id/editCategory"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <TextView
        android:id="@+id/periodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_period"
        app:layout_constraintBottom_toBottomOf="@+id/editPeriod"
        app:layout_constraintEnd_toStartOf="@+id/editPeriod"
        app:layout_constraintTop_toBottomOf="@+id/editCategory" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search_submit_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPeriod"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>